# asd_api

./: README.md  generate_secret.py  manage.py  pyproject.toml
asd_api/: asgi.py  settings.py  urls.py  wsgi.py
manifesto/: admin.py  apps.py  fixtures.json  models.py  serializers.py  urls.py  views.py
manifesto/migrations/: 0001_initial.py
