[tool.poetry]
name = "asd_api"
version = "0.1.0"
description = ""
authors = ["Rene Padillo <developer@renesansz.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
djangorestframework = "^3.12.4"
django-environ = "^0.4.5"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
